src/objects/Grant_Report_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Date_Due_to_Reviewer__c</fullName>
        <label>Date Due to Reviewer</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grant_Name__c</fullName>
        <description>For use in Merge on Chatter</description>
        <formula>Grant_Reporting__r.Grant_Management__r.Name &amp; &quot;(&quot; &amp; Grant_Reporting__r.Grant_Management__r.Grantee__r.Name &amp; &quot;)&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grant Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grant_Reporting__c</fullName>
        <label>Grant Reporting</label>
        <referenceTo>Grant_Reporting_Requirement__c</referenceTo>
        <relationshipName>Grant_Reports</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Link_to_Report__c</fullName>
        <label>Link to Report</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Report_Format__c</fullName>
        <label>Report Format</label>
        <picklist>
            <picklistValues>
                <fullName>Word</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Excel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PDF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PowerPoint</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Report_Reviewer_Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Report Reviewer Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Grant Report Items (Report Reviewer Contact)</relationshipLabel>
        <relationshipName>Grant_Report_Items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Report_Writer_Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Report Writer Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Grant Report Items</relationshipLabel>
        <relationshipName>Grant_Report_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Report_Writer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Report Writer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Grant_Reports1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Grant_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Short_Description__c</fullName>
        <label>Short Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted for Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Grant Report Item</label>
    <nameField>
        <displayFormat>GD-{000000}</displayFormat>
        <label>Grant Item Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Grant Report Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>